# citybuddy

./: .editorconfig  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  Makefile  README.md  checkstyle.xml  compose.yaml  pom.xml  pyproject.toml
.github/workflows/: ci.yml
agent-service/: openapi.json  pyproject.toml
agent-service/src/citybuddy_agent/: __init__.py  __main__.py  agent_control.py  application.py  conversation.py  evaluation.py  faq_cache.py  feedback.py  knowledge.py  retrieval.py  sse.py
agent-service/src/citybuddy_agent/calibration/: cb091-v1.json
agent-service/tests/: test_agent_control.py  test_agent_faq_cache.py  test_agent_knowledge.py  test_application.py  test_retrieval.py  test_sse.py
auth-service/: pom.xml
commerce-service/: pom.xml
docs/: CONTRACTS.md  LESSONS.md  REVIEW_CHECKLIST.md
docs/slices/: CB-000.md  CB-010.md  CB-011.md  CB-012.md  CB-013.md  CB-014.md  CB-020.md  CB-030.md  CB-040.md  CB-050.md  CB-051.md  CB-060.md  CB-061.md  CB-070.md  CB-071.md  CB-080.md  CB-081.md  CB-082.md  CB-085.md  CB-090.md  CB-091.md  CB-100.md  CB-101.md  CB-102.md  CB-103.md  CB-104.md  CB-105.md  CB-110.md  CB-111.md  CB-112.md  CB-113.md  CB-114.md  CB-115.md  (+3 more)
knowledge-indexer/: pyproject.toml
knowledge-indexer/src/citybuddy_indexer/: __init__.py  __main__.py  faq_cache.py  incremental.py  knowledge.py  rebuild.py  rebuild_runtime.py  rocketmq_spike.py  spike_event.py  worker.py
knowledge-indexer/tests/: test_incremental.py  test_indexer_faq_cache.py  test_indexer_knowledge.py  test_rebuild.py  test_rocketmq_spike.py  test_worker.py
scripts/: apply_mysql_grants.sh  check_agent_evaluation_evidence.py  check_docs_route.py  check_evaluation_token.py  check_evaluation_views.py  check_faq_cache.py  check_identity_jwks.py  check_incremental_knowledge_sync.py  check_knowledge_rebuild.py  check_knowledge_rebuild_concurrency.py  check_knowledge_search.py  check_retrieval_calibration.py  check_retrieval_evidence.py  check_sse_stream.py  drop_response_proxy.py  fake_litellm_server.py  hash_test_credential.py  identity_chain_probe.py  init_local.sh  install-gitleaks.sh  read_json_field.py  require_local_env.sh  run_mysql_migrations.sh  seed_legacy_knowledge_mapping.py  start_support_redis.sh  surefire_evidence.sh  test_catalog_integration.sh  test_dynamic_ports.sh  test_elasticsearch_integration.sh  test_evaluation_identity_integration.sh  test_evaluation_sandbox_integration.sh  test_identity_integration.sh  test_knowledge_indexer_rocketmq_spike.sh  test_knowledge_rebuild_integration.sh  test_knowledge_search_integration.sh  test_knowledge_sync_integration.sh  test_mysql_integration.sh  test_port_allocator.py  test_port_allocator.sh  test_redis_integration.sh  (+3 more)
tests/: test_agent_contracts.py  test_async_entry_inventory.py  test_catalog_contracts.py  test_cb060_transaction_contract.py  test_cb120_action_contract.py  test_check_docs_route.py  test_drop_response_proxy.py  test_dynamic_test_ports.py  test_evaluation_evidence_contracts.py  test_evaluation_identity_contracts.py  test_evaluation_payment_contracts.py  test_evaluation_sandbox_contracts.py  test_evaluation_views_contracts.py  test_identity_contracts.py  test_local_config.py  test_surefire_evidence.py  test_test_port_allocator.py
web/: eslint.config.js  index.html  package-lock.json  package.json
(+238 files in other folders)
