[project]
name = "citybuddy-workspace"
version = "0.0.1"
requires-python = ">=3.11,<3.12"

[dependency-groups]
dev = [
  "build==1.2.2.post1",
  "mypy==1.17.0",
  "pytest==8.4.1",
  "ruff==0.12.4",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["agent-service", "knowledge-indexer"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["agent-service/tests", "knowledge-indexer/tests"]
