[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "citybuddy-knowledge-indexer"
version = "0.0.1"
description = "CityBuddy versioned public-knowledge index bootstrap"
requires-python = ">=3.11,<3.12"
dependencies = [
    "rocketmq-python-client==5.1.1",
]

[project.scripts]
citybuddy-indexer = "citybuddy_indexer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citybuddy_indexer"]
